--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://wapanels.com/" />
+    <meta property="og:url" content="https://multi-wa-mate.vercel.app/" />
     <meta property="og:title" content="WAPANELS - WhatsApp Multi-Device Management Platform" />
     <meta property="og:description" content="Kelola multiple WhatsApp devices, broadcast messages, chatbot automation, dan lebih banyak lagi dalam satu platform profesional" />
     <meta property="og:image" content="/og-image.png" />
@@ -29,7 +29,7 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://wapanels.com/" />
+    <meta name="twitter:url" content="https://multi-wa-mate.vercel.app/" />
     <meta name="twitter:title" content="WAPANELS - WhatsApp Multi-Device Management Platform" />
     <meta name="twitter:description" content="Kelola multiple WhatsApp devices, broadcast messages, chatbot automation dalam satu platform" />
     <meta name="twitter:image" content="/og-image.png" />
@@ -66,7 +66,7 @@
       "author": {
         "@type": "Organization",
         "name": "WAPANELS",
-        "url": "https://wapanels.com"
+        "url": "https://multi-wa-mate.vercel.app"
       },
       "featureList": [
         "Multi-Device WhatsApp Management",
