--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <meta property="og:url" content="https://multi-wa-mate.vercel.app/" />
     <meta property="og:title" content="HalloWa - WhatsApp Bot Marketing Platform" />
     <meta property="og:description" content="Platform WhatsApp Bot Marketing profesional untuk kelola multiple devices, broadcast messages, chatbot automation dalam satu platform terpadu" />
-    <meta property="og:image" content="/og-image.png" />
-    <meta property="og:image:secure_url" content="/og-image.png" />
-    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image:secure_url" content="/og-image.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="HalloWa - WhatsApp Bot Marketing Platform" />
