--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta name="twitter:url" content="https://multi-wa-mate.vercel.app/" />
     <meta name="twitter:title" content="HalloWa - WhatsApp Bot Marketing Platform" />
     <meta name="twitter:description" content="Platform WhatsApp Bot Marketing profesional untuk kelola multiple devices, broadcast messages, chatbot automation" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/og-image.jpg" />
     <meta name="twitter:image:alt" content="HalloWa Platform" />
     
     <!-- Additional SEO Meta Tags -->
