--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="HalloWa" />
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <link rel="apple-touch-icon" href="https://multi-wa-mate.vercel.app/icon-192.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
     <!-- Open Graph / Facebook / WhatsApp -->
@@ -20,8 +20,8 @@
     <meta property="og:url" content="https://multi-wa-mate.vercel.app/" />
     <meta property="og:title" content="HalloWa - WhatsApp Bot Marketing Platform" />
     <meta property="og:description" content="Platform WhatsApp Bot Marketing profesional untuk kelola multiple devices, broadcast messages, chatbot automation dalam satu platform terpadu" />
-    <meta property="og:image" content="/og-image.jpg" />
-    <meta property="og:image:secure_url" content="/og-image.jpg" />
+    <meta property="og:image" content="https://multi-wa-mate.vercel.app/og-image.jpg" />
+    <meta property="og:image:secure_url" content="https://multi-wa-mate.vercel.app/og-image.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -34,7 +34,7 @@
     <meta name="twitter:url" content="https://multi-wa-mate.vercel.app/" />
     <meta name="twitter:title" content="HalloWa - WhatsApp Bot Marketing Platform" />
     <meta name="twitter:description" content="Platform WhatsApp Bot Marketing profesional untuk kelola multiple devices, broadcast messages, chatbot automation" />
-    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:image" content="https://multi-wa-mate.vercel.app/og-image.jpg" />
     <meta name="twitter:image:alt" content="HalloWa Platform" />
     
     <!-- Additional SEO Meta Tags -->
@@ -85,4 +85,4 @@
     }
     </script>
   </body>
-      </html>
+</html>
